# mlb-data-lab

./: .gitignore  LICENSE  MANIFEST.in  README.md  fangraphs-cols.json  pitch_type_data_2025.csv  player_id_map.csv  player_id_map_headers.csv  pyproject.toml  requirements.txt  setup.py  setup_db.sql  startup.py
baseball_data_lab/: __init__.py  config.py  constants.py  special_name_mappings.py  utils.py
docs/: pitcher_summary.ipynb  player_design.json  situation_codes.json
examples/: generate_player_summary.py  generate_team_summary.py  print_season_totals.py  pytest.ini  save_fangraphs_leaderboards.py  save_players.py  save_season_stats.py  save_statcast_data.py
mlb-data-lab/: constants.py  sample.json
mlb_data_lab/: config.py  constants.py  pitch_data.py  special_case_names.py  special_name_mappings.json  special_name_mappings.py  utils.py
mlb_stats/: __init__.py  config.py  player.py  plotting.py  roster.py  summary_sheet.py  team.py  utils.py
mlb_stats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mlb_summary_sheets/: config.py  constants.py  data_fetcher.py  player.py  player_bio.py  player_info.py  player_lookup.py  plotting.py  roster.py  sample.json  summary_sheet.py  team.py  test.py  utils.py
schemas/: batter_stat_splits_schema.json  fetch_active_roster.json  fetch_player_stats_by_season-batter.json  fetch_player_stats_by_season-pitcher.json  fetch_player_stats_career-batting.json  fetch_player_stats_career-pitching.json  game_boxscore_data.json  game_feed_schema.json  get_standings_data.json  (+5 more)
scripts/: main.py  (+11 more)
(+377 files in other folders)
